--- a/src/public/html/home.html
+++ b/src/public/html/home.html
@@ -8,10 +8,15 @@
   <title>Authentication</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link type="text/css" rel="stylesheet" href="public/css/home.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Dancing+Script&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">Home</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -33,11 +38,24 @@
       </div>
     </div>
   </nav>
+
+  <main>
+    <h1 class="title">
+      Welcome to my page traveler, please take some rest
+    </h1>
+  </main>
+
+  <div style="flex-grow: 1;"></div>
+  <footer class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+      <p>Background image by <a href="https://simorico.tumblr.com/post/174916431500/campfire-in-the-woods-i-just-finished-this-on-my">Simorico</a></p>
+      <a class="navbar-brand" href="/">Home</a>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <script>
-  </script>
+  <script src="public/js/navbarLogin.js"></script>
 </body>
 
 </html>
