--- a/src/public/html/profile.html
+++ b/src/public/html/profile.html
@@ -10,11 +10,71 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
-<body>
+<body onload="main()">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">Home</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/profile">Profile</a>
+          </li>
+          <li class="nav-item login" style="display: none;">
+            <a class="nav-link" href="/auth/login">Login</a>
+          </li>
+          <li class="nav-item logout" style="display: none;">
+            <a class="nav-link" href="/auth/logout">Logout</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <main>
+    <div class="container">
+      <h1>Profile</h1>
+      <div class="d-flex flex-row">
+        <!-- Picture -->
+        <div class="picture-container">
+          <img id="user.picture" class="" src="" alt="Loading picture...">
+        </div>
+
+        <div class="ms-2 me-2 vr"></div>
+        <!-- Info -->
+        <div>
+          <h2 id="user.name">Loading name...</h2>
+          <p id="user.email">Loading email...</p>
+          <p id="user.createdAt">Loading join date...</p>
+        </div>
+      </div>
+  </main>
+
   <!-- Profile page here-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+
+  <script>
+    async function main() {
+      const user = await fetch('/auth/verifyLogin')
+        .then(res => res.json())
+        .catch(err => console.error(err));
+
+      console.log('Perfil', user);
+
+      document.getElementById('user.picture').src = user.imageUrl;
+      document.getElementById('user.name').innerText = user.name;
+      document.getElementById('user.email').innerText = user.email;
+      document.getElementById('user.createdAt').innerText = new Date(user.timestamp).toLocaleString();
+
+      console.log(user);
+    }
+  </script>
+  <script src="public/js/navbarLogin.js"></script>
 </body>
 
 </html>
